--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 #game-state-message {
