--- a/style.css
+++ b/style.css
@@ -10,6 +10,59 @@ body {
   user-select: none;
 }
 
+form {
+  margin: 0;
+  padding: 0;
+}
+p, li, h2 {
+  margin: 10px;
+  padding: 0;
+  font-size: 24px;
+  font-weight: normal;
+}
+h2 {
+  margin-top: 40px;
+}
+ul {
+  margin: 0 0 0 1.5em;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: #00d;
+}
+a:hover {
+  text-decoration: underline;
+}
+input[type="text"],
+input[type="submit"] {
+  padding: 3px;
+  font-family: sans-serif;
+  font-size: 24px;
+}
+
+#back-link-p {
+  position: fixed;
+  margin: 0;
+  left: 5px;
+  bottom: 10px;
+  width: 58px;
+  z-index: 2500;
+}
+#back-link-p a {
+  display: block;
+  padding: 5px 0;
+  text-align: center;
+  font-size: 14px;
+  background: #333;
+  color: #fff;
+  border-radius: 3px;
+}
+#back-link-p a:hover {
+  background: #111;
+  text-decoration: none;
+}
+
 #game-state-message {
   position: fixed;
   left: 75px;
@@ -59,7 +112,7 @@ body {
   display: block;
   font-size: 25px;
 }
-#tile-board-container {
+.network #tile-board-container {
   padding-top: 27px;
 }
 #tile-board {
