--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 
+
+@font-face {
+  font-family: 'Source Sans 3';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(fonts/source-sans-3-latin-400.woff) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
 body {
   background: #ddd;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Source Sans 3', sans-serif;
   -webkit-user-select: none;
   user-select: none;
   touch-action: none;
@@ -165,6 +176,7 @@ svg .tile-segments {
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
   display: flex;
   flex-direction: row;
   height: 100%;
@@ -262,16 +274,28 @@ svg .tile-segments {
   padding: 10px 0 10px 0;
   border-radius: 50px;
   border: 8px solid #63851d;
-  border: 8px solid #777;
   background: #e1f0c1;
+  color: #63851d;
+  opacity: 0.5;
+  /*
   background: #ccc;
+  border: 8px solid #777;
+  */
   font-size: 32px;
-  font-weight: bold;
   text-align: center;
+}
+.scoreDisplay.animate {
+  animation-name: scoreDisplay-opacity-anim;
+  animation-duration: 1000ms;
 }
 .scoreDisplay p {
   margin: 0;
   padding: 0;
+}
+@keyframes scoreDisplay-opacity-anim {
+  0% { opacity: 0.5; transform: scale(1.0); }
+  50% { opacity: 1.0; transform: scale(1.1); }
+  100% { opacity: 0.5; transofrm: scale(1.0); }
 }
 
 
@@ -468,6 +492,7 @@ svg .tile-segments {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
