--- a/style.css
+++ b/style.css
@@ -336,6 +336,9 @@ svg .tile-segments {
 .tileStackDisplay .tileOnStack.drag-success {
   transition-property: none;
 }
+.tileStackDisplay .tileOnStack.drag-success .tileOnStack-rotatable.animated {
+  transition-property: none;
+}
 
 .tileOnStack-rotatable.animated {
   transition: transform 100ms ease;
