--- a/style.css
+++ b/style.css
@@ -603,16 +603,20 @@ svg .tile-segments {
   display: flex;
   flex-direction: row;
   margin: auto auto;
+  flex-grow: 1;
+  align-items: center;
+  width: 80%;
 }
 .gameList-exampleTile {
   position: relative;
-  width: 300px;
-  height: 300px;
-  margin: 20px;
+  margin: 10px;
+  width: 100%;
+  aspect-ratio: 1/1;
   cursor: pointer;
   transform: scale(1.0);
   transition-property: transform;
   transition-duration: 100ms;
+  flex-grow: 1;
 }
 .gameList-exampleTile:hover {
   transform: scale(1.1);
