--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ svg .tile-segments {
   flex-direction: row;
   height: 100%;
   width: 100%;
+  box-shadow: inset 0 0 40px rgb(0 0 0 / 20%);
 }
 .mainGridContainer {
   width: auto;
@@ -600,6 +601,7 @@ svg .tile-segments {
   flex-direction: column;
   justify-content: center;
   align-items: center
+  box-shadow: inset 0 0 40px rgb(0 0 0 / 20%);
 }
 .gameList {
   display: flex;
