--- a/style.css
+++ b/style.css
@@ -276,13 +276,15 @@ svg .tile-segments {
 
 
 
-.mainGridContainer .gridDisplay,
-.patternEditorGridContainer .gridDisplay,
-.tileEditorGridContainer .gridDisplay {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 1000;
+.gridDisplay,
+.gridDisplay .grid,
+.gridDisplay .grid svg {
+  width: 100%;
+  height: 100%;
+}
+.gridDisplay.animated .svg-grid {
+  transition-property: all;
+  transition-duration: 400ms;
 }
 
 .editorDisplay {
